fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1533,7 +1533,7 @@ body.no-scroll {
 
     .hero__CTA {
         position: absolute;
-        bottom: 10%;
+        bottom: 5%;
         left: 10%;
         right: 10%;
         width: 80%;
